// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PassCode Snapshot tests should match snapshot with code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      >
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
      </div>
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component component digit component"
        type="button"
      >
        1
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        2
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        3
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        4
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        5
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        6
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        7
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        8
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        9
      </button>
      <div />
      <button
        class="component component digit component"
        type="button"
      >
        0
      </button>
      <div />
    </div>
  </div>
</div>
`;

exports[`PassCode Snapshot tests should match snapshot with unknown code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      />
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component component digit component"
        type="button"
      >
        1
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        2
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        3
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        4
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        5
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        6
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        7
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        8
      </button>
      <button
        class="component component digit component"
        type="button"
      >
        9
      </button>
      <div />
      <button
        class="component component digit component"
        type="button"
      >
        0
      </button>
      <div />
    </div>
  </div>
</div>
`;
